--- a/170516/Views/Home/Contact.cshtml
+++ b/170516/Views/Home/Contact.cshtml
@@ -73,19 +73,19 @@
                 <aside class="col-md-3 col-lg-offset-1">
                     <div class="sidebar">
                         <div class="side vertical-divider-left">
-                            <h3 class="title logo-font">Công Ty Xây Dựng</h3>
+                            <h3 class="title logo-font">@ViewData["CompanyName"]</h3>
                             <div class="separator-2 mt-20"></div>
                             <ul class="list">
-                                <li><i class="fa fa-home pr-10"></i>K10/10 Cầu Giấy<br><span class="pl-20">Hà Nội, Việt Nam</span></li>
-                                <li><i class="fa fa-phone pr-10"></i><abbr title="Điện Thoại">P:</abbr> (84) 456-7890</li>
-                                <li><i class="fa fa-mobile pr-10 pl-5"></i><abbr title="Điện Thoại">M:</abbr> (84) 456-7890</li>
-                                <li><i class="fa fa-envelope pr-10"></i><a href="mailto:han.solo@gmail.com">han.solo@gmail.com</a></li>
+                                <li><i class="fa fa-home pr-10"></i>@ViewData["Address"]</li>
+                                <li><i class="fa fa-phone pr-10"></i><abbr title="Điện Thoại">P:</abbr> @ViewData["Phone"]</li>
+                                <li><i class="fa fa-mobile pr-10 pl-5"></i><abbr title="Điện Thoại">M:</abbr> @ViewData["MobilePhone"]</li>
+                                <li><i class="fa fa-envelope pr-10"></i><a href="mailto:@ViewData["EmailAddress"]">@ViewData["EmailAddress"]</a></li>
                             </ul>
                             <ul class="social-links circle small margin-clear clearfix animated-effect-1">
-                                <li class="skype"><a target="_blank" href="http://www.skype.com" style="color:#00aff0;"><i class="fa fa-skype"></i></a></li>
-                                <li class="linkedin"><a target="_blank" href="http://www.linkedin.com" style="color: #0976b4;"><i class="fa fa-linkedin"></i></a></li>
-                                <li class="googleplus"><a target="_blank" href="http://plus.google.com" style="color: #dd4b39;"><i class="fa fa-google-plus"></i></a></li>
-                                <li class="facebook"><a target="_blank" href="http://www.facebook.com" style="color: #3b5998;"><i class="fa fa-facebook"></i></a></li>
+                                <li class="skype"><a target="_blank" href="@ViewData["SkypeLink"]" style="color:#00aff0;"><i class="fa fa-skype"></i></a></li>
+                                <li class="linkedin"><a target="_blank" href="@ViewData["LinkedInLink"]" style="color: #0976b4;"><i class="fa fa-linkedin"></i></a></li>
+                                <li class="googleplus"><a target="_blank" href="@ViewData["GoogleLink"]" style="color: #dd4b39;"><i class="fa fa-google-plus"></i></a></li>
+                                <li class="facebook"><a target="_blank" href="@ViewData["FacebookLink"]" style="color: #3b5998;"><i class="fa fa-facebook"></i></a></li>
                             </ul>
                             <div class="separator-2 mt-20 "></div>
                         </div>
